fix: add visibility to dropdown menu options

--- a/src/app/(dashboard)/users/_components/UsersTable/FilterBtn/styles.module.css
+++ b/src/app/(dashboard)/users/_components/UsersTable/FilterBtn/styles.module.css
@@ -31,12 +31,14 @@
   overflow-y: auto;
   z-index: 1000;
   opacity: 0;
+  visibility: hidden;
   transform: translateY(-10px);
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
 .dropdown.open {
   opacity: 1;
+  visibility: visible;
   transform: translateY(0);
 }
 
